fixed h1 alignment

--- a/src/global.css
+++ b/src/global.css
@@ -113,7 +113,7 @@ h1 {
 
   font-weight: 700;
   line-height: 1;
-  text-align: center;
+  /* text-align: center; */
 
 }
 
